# ProcessorSDK

./: .gitattributes  .gitignore  LICENSE  README.md  manifest.html  setup.sh
app_utils/: Makefile
c7x-mma-tidl/: makefile
c7x-mma-tidl/arm-tidl/: config.mk  makefile
c7x-mma-tidl/arm-tidl/common/: tidl_onnxrt_common.h  tidl_runtimes_infer_common.cpp  tidl_runtimes_infer_common.h
c7x-mma-tidl/arm-tidl/tidlrt_ep/: makefile
c7x-mma-tidl/arm-tidl/tiovx_kernels/: makefile
c7x-mma-tidl/common/: GlobalTypes.h  app_log.h  app_log_priv.h  app_log_writer.c  configparser.c  configparser.h  platform_common.h  ti_draw_utils.c  ti_draw_utils.h  ti_file_io.c  ti_file_io.h  ti_file_io_msg.h  ti_mem_manager.c  ti_mem_manager.h  tidl_log.c  tsc.h
c7x-mma-tidl/common/asprintf/: asprintf.c  asprintf.h
c7x-mma-tidl/common/getopt/: getopt.c  getopt.h
c7x-mma-tidl/makerules/: common.mk  config.mk  rules.mk
c7x-mma-tidl/ti_dl/: makefile
c7x-mma-tidl/ti_dl/utils/tidlrtInterface/: CMakeLists.txt  README.md  aarch64_toolchain.cmake  build.sh  setup.py
c7x-mma-tidl/ti_dl/utils/tidlrtInterface/binding/: tidlruntime_pybind.cpp
c7x-mma-tidl/ti_dl/utils/tidlrtInterface/examples/: example_compile.py  example_inference.py  utils.py
c7x-mma-tidl/ti_dl/utils/tidlrtInterface/include/: tidlruntime_compile.h  tidlruntime_compile_options.h  tidlruntime_infer.h  tidlruntime_infer_options.h  tidlruntime_utility.h
c7x-mma-tidl/ti_dl/utils/tidlrtInterface/src/: tidlruntime_compile.cpp  tidlruntime_compile_options.cpp  tidlruntime_infer.cpp  tidlruntime_infer_options.cpp
c7x-mma-tidl/tidl_tools/: PC_dsp_test_dl_algo.out  device_config.cfg  itidl_io.h  itidl_rt.h  itvm_rt.h  libvx_tidl_rt.so.1.0  ti_cnnperfsim.out  tidl_graphVisualiser.out  tidl_graphVisualiser_runtimes.out  tidl_model_import.out  tidl_model_secure.out
edgeai/edgeai-apps-utils/: .gitignore  CMakeLists.txt  README.md
edgeai/edgeai-apps-utils/cmake/: common.cmake  cross_compile_aarch64.cmake
edgeai/edgeai-apps-utils/include/: edgeai_arm_neon_utils.h  edgeai_dl_color_convert_armv8_utils.h  edgeai_dl_pre_proc_armv8_utils.h  edgeai_dl_scaler_armv8_utils.h  edgeai_image_params.h  edgeai_nv12_drawing_utils.h  edgeai_nv12_font_utils.h  edgeai_overlay_perf_stats_utils.h  edgeai_perf_stats_utils.h
edgeai/edgeai-apps-utils/src/: edgeai_arm_neon_utils.c  edgeai_dl_color_convert_armv8_utils.c  edgeai_dl_pre_proc_armv8_utils.c  edgeai_dl_scaler_armv8_utils.c  edgeai_nv12_drawing_utils.c  edgeai_nv12_font_utils.c  edgeai_overlay_perf_stats_utils.c  edgeai_perf_stats_utils.c
edgeai/edgeai-apps-utils/utility-scripts/font-bitmap-generator/: README.md  font_bitmap_generator.py
edgeai/edgeai-tiovx-kernels/: CMakeLists.txt  README.md
ethfw/: .gitignore  ethfw_build_flags.mak  ethfw_tools_path.mak  makefile  makefile.cpsw.am62ax.mcu-r5f.ti-arm-clang  makefile.cpsw.am62ax.r5f.ti-arm-clang  makefile.cpsw.am62dx.dm-r5f.ti-arm-clang  makefile.cpsw.am62dx.r5f.ti-arm-clang  makefile.cpsw.am62px.mcu-r5f.ti-arm-clang  makefile.cpsw.am62px.wkup-r5f.ti-arm-clang  makefile.cpsw.j722s.main-r5f.ti-arm-clang  makefile.cpsw.j722s.mcu-r5f.ti-arm-clang
ethfw/.project/: project_am62ax_ethfw.js  project_am62dx_ethfw.js  project_am62px_ethfw.js  project_ethfw.js  project_j722s_ethfw.js
ethfw/apps/: concerto_inc.mak
ethfw/concerto/: combo.mak  combo_filters.mak  finale.mak  machine.mak  os.mak  rules.mak  shell.mak
ethfw/makerules/: ethfw_soc_config.mak  makefile_pdk.mak
ethfw/unit_test/: concerto_inc.mak
imaging/: .gitignore  Makefile
mcu_plus_sdk/: README.md  imports.mak  makefile  makefile.am243x  makefile.am263x  makefile.am273x  makefile.am62ax  makefile.am62px  makefile.am62x  makefile.am64x  makefile.awr294x  makefile.j722s  makefile_projectspec.am243x  makefile_projectspec.am263x  makefile_projectspec.am273x  makefile_projectspec.am62ax  makefile_projectspec.am62px  makefile_projectspec.am62x  makefile_projectspec.am64x  makefile_projectspec.awr294x  makefile_projectspec.j722s
mcu_plus_sdk/.metadata/: product.json
mcu_plus_sdk/.project/: genMakefiles.js  genProjectSpec.js  project.js
mcu_plus_sdk/devconfig/: devconfig.mak
mcu_plus_sdk/test/: makefile.am243x  makefile.am263x  makefile.am273x  makefile.am62ax  makefile.am62px  makefile.am62x  makefile.am64x  makefile.awr294x  makefile_projectspec.am243x  makefile_projectspec.am263x  makefile_projectspec.am64x  makefile_projectspec.j722s
sdk_builder/: build_flags.mak  make_sdk.sh  tools_path.mak  vision_apps_build_flags.mak
sdk_builder/makerules/: makefile_check_paths.mak  makefile_ecu.mak  makefile_edgeai.mak  makefile_linux_arm.mak  makefile_mcu_plus_sdk.mak  makefile_qnx.mak  makefile_sbl_combined_appimage.mak  makefile_uboot.mak  makefile_vision_apps.mak
sdk_builder/scripts/: Makefile  board_env.sh  copy_from_sd_card.sh  install_data_set_to_sd_card.sh  install_to_sd_card.sh  mk-linux-card.sh  setup_psdk_rtos.sh
ti-perception-toolkit/: .gitignore
tiadalg/makerules/: config.mk
vision_apps/: Makefile
vision_apps/apps/: concerto_mpu_inc.mak  concerto_x86_64_inc.mak
vxlib/: .gitignore
(+6360 files in other folders)
